force-app/main/default/objects/Case__c/fields/Case_Notes__c.field-meta.xml
<CustomField>
    <fullName>Case_Notes__c</fullName>
    <label>Case Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>