force-app/main/default/objects/Case__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <label>Case Number</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>