force-app/main/default/objects/Case__c/fields/Case_SubType__c.field-meta.xml
<CustomField>
    <fullName>Case_SubType__c</fullName>
    <label>Case SubType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract Dispute</fullName>
            </value>
            <value>
                <fullName>Tort – Personal Injury</fullName>
            </value>
            <value>
                <fullName>Tort – Property Damage</fullName>
            </value>
            <value>
                <fullName>Tort – Negligence</fullName>
            </value>
            <value>
                <fullName>Product Liability</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Intellectual Property</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Civil Rights</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>ERISA</fullName>
            </value>
            <value>
                <fullName>Securities</fullName>
            </value>
            <value>
                <fullName>Antitrust</fullName>
            </value>
            <value>
                <fullName>Consumer Protection</fullName>
            </value>
            <value>
                <fullName>Felony</fullName>
            </value>
            <value>
                <fullName>Misdemeanor</fullName>
            </value>
            <value>
                <fullName>Federal Indictment</fullName>
            </value>
            <value>
                <fullName>White Collar</fullName>
            </value>
            <value>
                <fullName>Drug Offense</fullName>
            </value>
            <value>
                <fullName>Violent Crime</fullName>
            </value>
            <value>
                <fullName>Chapter 7</fullName>
            </value>
            <value>
                <fullName>Chapter 11</fullName>
            </value>
            <value>
                <fullName>Chapter 13</fullName>
            </value>
            <value>
                <fullName>Chapter 15</fullName>
            </value>
            <value>
                <fullName>Adversary Proceeding</fullName>
            </value>
            <value>
                <fullName>Regulatory Proceeding</fullName>
            </value>
            <value>
                <fullName>Agency Appeal</fullName>
            </value>
            <value>
                <fullName>License / Permit</fullName>
            </value>
            <value>
                <fullName>Subpoena</fullName>
            </value>
            <value>
                <fullName>Garnishment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>