force-app/main/default/objects/Case__c/fields/Claims_Admin_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Claims_Admin_Deadline__c</fullName>
    <label>Claims Admin Deadline</label>
    <type>Date</type>
</CustomField>