force-app/main/default/objects/Case__c/fields/Class_Definition__c.field-meta.xml
<CustomField>
    <fullName>Class_Definition__c</fullName>
    <label>Class Definition</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>