force-app/main/default/objects/Case__c/fields/Class_Period_EndDate__c.field-meta.xml
<CustomField>
    <fullName>Class_Period_EndDate__c</fullName>
    <label>Class Period EndDate</label>
    <type>Date</type>
</CustomField>