force-app/main/default/objects/Case__c/fields/Class_Period_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Class_Period_StartDate__c</fullName>
    <label>Class Period StartDate</label>
    <type>Date</type>
</CustomField>