force-app/main/default/objects/Case__c/fields/Consolidated_Into__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Into__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consolidated Into</label>
    <referenceTo>Case__c</referenceTo>
    <relationshipName>Consolidated_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>