force-app/main/default/objects/Case__c/fields/Consolidated_Legal_Proceeding__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Legal_Proceeding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consolidated Legal Proceeding</label>
    <referenceTo>Consolidated_Legal_Proceeding__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Court_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>