force-app/main/default/objects/Case__c/fields/Consolidation_Group__c.field-meta.xml
<CustomField>
    <fullName>Consolidation_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consolidation Group</label>
    <referenceTo>Consolidation_Group__c</referenceTo>
    <relationshipName>Court_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>