force-app/main/default/objects/Case__c/fields/Court__c.field-meta.xml
<CustomField>
    <fullName>Court__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Court</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Court</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Court_Cases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>