force-app/main/default/objects/Case__c/fields/Court_Division__c.field-meta.xml
<CustomField>
    <fullName>Court_Division__c</fullName>
    <label>Court Division</label>
    <length>50</length>
    <type>Text</type>
</CustomField>