force-app/main/default/objects/Case__c/fields/Defendant_Titles__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Titles__c</fullName>
    <label>Defendant Titles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>