force-app/main/default/objects/Case__c/fields/Defendent_Respondent_Names__c.field-meta.xml
<CustomField>
    <fullName>Defendent_Respondent_Names__c</fullName>
    <label>Defendent / Respondent Names</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>