force-app/main/default/objects/Case__c/fields/Is_Class_Action__c.field-meta.xml
<CustomField>
    <fullName>Is_Class_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Class Action</label>
    <type>Checkbox</type>
</CustomField>