force-app/main/default/objects/Case__c/fields/Is_Lead_Case__c.field-meta.xml
<CustomField>
    <fullName>Is_Lead_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Lead Case</label>
    <type>Checkbox</type>
</CustomField>