force-app/main/default/objects/Case__c/fields/Is_Pre_Litigation__c.field-meta.xml
<CustomField>
    <fullName>Is_Pre_Litigation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pre Litigation</label>
    <type>Checkbox</type>
</CustomField>