force-app/main/default/objects/Case__c/fields/Jurisdiction_Type__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction_Type__c</fullName>
    <label>Jurisdiction Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Local / Municipal</fullName>
            </value>
            <value>
                <fullName>Tribal</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>