force-app/main/default/objects/Case__c/fields/Lower_Court_Case__c.field-meta.xml
<CustomField>
    <fullName>Lower_Court_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lower Court Case</label>
    <referenceTo>Case__c</referenceTo>
    <relationshipName>Higher_Court_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>