force-app/main/default/objects/Case__c/fields/Plaintiff_Petitioner_Names__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Petitioner_Names__c</fullName>
    <label>Plaintiff / Petitioner Names</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>