force-app/main/default/objects/Case__c/fields/Plaintiff_Titles__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Titles__c</fullName>
    <label>Plaintiff Titles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>