force-app/main/default/objects/Case__c/fields/Related_Case_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_Numbers__c</fullName>
    <label>Related Case Numbers</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>