force-app/main/default/objects/Case__c/fields/Stay_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Stay_End_Date__c</fullName>
    <label>Stay End Date</label>
    <type>Date</type>
</CustomField>