force-app/main/default/objects/Case__c/fields/Stay_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Stay_Start_Date__c</fullName>
    <label>Stay Start Date</label>
    <type>Date</type>
</CustomField>